--- a/agreement.html
+++ b/agreement.html
@@ -55,7 +55,7 @@
             <label class="form-label" for="agreementEmail">
               Email
               <span class="info-dot" data-bs-toggle="tooltip" data-bs-placement="right"
-                title="Use the same email you used for registration or your refund claim.">i</span>
+                title="Use the same email for this Agreement and for KYC Verification to get Refund">i</span>
             </label>
             <input type="email" class="form-control" id="agreementEmail" required placeholder="you@example.com"/>
           </div>
