--- a/success.html
+++ b/success.html
@@ -100,7 +100,7 @@
 
   if (email) {
     // Show it on the page or use it however you like
-    document.getElementById("userEmail").textContent = email;
+    document.getElementById("email").textContent = email;
   }
         const blockpass = new BlockpassKYCConnect("refund_portal_00d03", {
         refId: email,    // Use the email as refId
