--- a/payment-plan.html
+++ b/payment-plan.html
@@ -224,7 +224,8 @@ async function populateRefundFields() {
 document.addEventListener('DOMContentLoaded', populateRefundFields);
 document.addEventListener("DOMContentLoaded", () => {
     const wallet = WALLET_ID; // already available
-    const refund = document.getElementById("amountToRefund").value = Math.abs(totalBalance);;
+    const refund = document.getElementById("amountToRefund").value;
+    console.log(refund);
 
     // Build URL with query params
     const link = document.getElementById("agreementLink");
