--- a/agreement.html
+++ b/agreement.html
@@ -141,8 +141,8 @@ l<!DOCTYPE html>
          
         })
         .catch(err => {
-          console.error("Error submitting agreement:", err);
-          alert("Something went wrong submitting your agreement.");
+          console.error("Error submitting form:", err);
+          alert("Something went wrong submitting your form.");
         });
       });
     });
