--- a/payment-plan.html
+++ b/payment-plan.html
@@ -117,7 +117,7 @@
 
             <!-- Save Plan -->
             <div class="mt-4 text-center">
-                <a id="agreementLink" class="btn btn-custom">Go to Agreement</a>
+                <a id="agreementLink" class="btn btn-custom">Go to Verification</a>
             </div>
         </div>
     </div>
