--- a/success.html
+++ b/success.html
@@ -82,7 +82,7 @@
             <div class="success-card">
                 <h1><i class="fas fa-check-circle"></i> Agreement Submitted</h1>
                 <p>Thank you for submitting your agreement.</p>
-                <p>Please complete your Blockpass verification using email you submitted for Agreement to receive your Refund.</p>
+                <p>Please complete your Blockpass verification to receive your Refund.</p>
                 <button id="blockpass-kyc-connect" class="btn btn-success">Connect with Blockpass</button>
 
                 <div class="d-flex justify-content-center gap-3 mt-4">
