--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <a href="#ContactsSec" class="a-items heading-SB">Contacts</a>
                             </li>
                             <li class="li-items">
-                                <a class="a-items heading-SB" href="refund.html">Refund Portal</a>
+                                <a class="a-items heading-SB" href="portal">Refund Portal</a>
                             </li>
                             </ul>
                         </div>
